--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ php:
     - nightly
 before_script:
     - composer self-update
-    - composer install
+    - composer install --ignore-platform-reqs
 
 script: ./vendor/bin/phpunit 
